# helloFFMPEG

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/top/foxhome/demo/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/top/foxhome/demo/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/top/foxhome/demo/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
